# Advent-of-Code-2025

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
day-01/: Cargo.toml
day-01/src/: lib.rs  main.rs
day-02/: Cargo.toml
day-02/src/: lib.rs  main.rs
day-03/: Cargo.toml
day-03/src/: lib.rs  main.rs
day-04/: Cargo.toml
day-04/src/: lib.rs  main.rs
day-05/: Cargo.toml
day-05/src/: lib.rs  main.rs
day-06/: Cargo.toml
day-06/src/: lib.rs
day-07/src/: lib.rs
day-08/: Cargo.toml
day-08/src/: lib.rs
util/src/: lib.rs
