[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
day-01 = { path = "../day-01" }
day-02 = { path = "../day-02" }
day-03 = { path = "../day-03" }
day-04 = { path = "../day-04" }
day-05 = { path = "../day-05" }
day-06 = { path = "../day-06" }
day-07 = { path = "../day-07" }

clap = { version = "4.5.53", features = ["derive"] }
yatl = "0.1.0"
